# Secrecy

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
deployment/: README.md  deploy.sh  secrets.sh  setup.sh
deployment/common/: hosts_file_temp  run.yaml  var_os_ubuntu.yaml
deployment/cross-region/: mpc.conf  run.yaml
deployment/experiments/: experiment-example.yaml
deployment/same-region/: experiment-examples.yaml  mpc_test.yaml  run.yaml
examples/: Makefile
examples/c_api/: comorbidity.c  join_distinct.c
examples/queries/: aspirin.txt  cdiff.txt  comorbidity.txt  credit.txt  pwd.txt  q1.txt  q2.txt  q3.txt  tpch-q13.txt  tpch-q4.txt  tpch-q6.txt
examples/schemas/: aspirin_schema.txt  cdiff_schema.txt  comorbidity_schema.txt  credit_schema.txt  pwd_schema.txt  q13_schema.txt  q1_schema.txt  q2_schema.txt  q3_schema.txt  q4_schema.txt  q6_schema.txt
include/: benchmarking.h  secrecy.h
include/benchmarking/: data.h
include/common/: communication.h  constants.h  table.h
include/core/: baseline.h  comm.h  mpctypes.h  party.h  primitives.h  relational.h  sharing.h  utils.h
include/planner/: bitset.h  codeGen.h  costs.h  database.h  dpTable.h  plan.h  planGen.h  preprocessor.h  query.h  queryGraph.h  relation.h  rule.h  sql_expression.h
results/results-emp/: join10K.out  join1K.out  join20K.out  join30K.out  join40K.out  join5K.out  join_all.out  sort.out
results/scripts/: plot-aws.py  plot-cmp-swap.py  plot-communication-micro.py  plot-computation-micro.py  plot-emp-join.py  plot-emp-sort.py  plot-equality.py  plot-queries-baseline.py  plot-relational-micro.py  plot-scalability-linear.py  plot-scalability-nonlinear.py  plot-scalability-q6.py  plot-semi-join-micro.py  run-exp-compare.sh  run-exp-distinct.sh  run-exp-equality.sh  run-exp-exchange.sh  run-exp-greater.sh  run-exp-group-by.sh  run-exp-join.sh  run-exp-order-by.sh  run-exp-rca.sh  run-exp-reveal.sh  run-exp-semi-join.sh  run-exp-tpch-q6.sh
src/benchmarking/: data.cpp
src/common/: communication.cpp  table.cpp
src/core/: baseline.cpp  comm.cpp  party.cpp  primitives.cpp  relational.cpp  sharing.cpp  utils.cpp
src/experiments/: exp-utils.h  exp_comp_swap.cpp  exp_distinct.cpp  exp_equality.cpp  exp_exchange.cpp  exp_geq_join.cpp  exp_greater.cpp  exp_group_by.cpp  exp_group_by_baseline.cpp  exp_group_by_join_naive.cpp  exp_group_by_join_opt.cpp  exp_group_by_sel.cpp  exp_join.cpp  exp_join_batched.cpp  exp_join_distinct_naive.cpp  exp_join_distinct_opt.cpp  exp_order_by.cpp  exp_q1.cpp  exp_q1_baseline.cpp  exp_q2.cpp  exp_q2_baseline.cpp  (+17 more)
(+138 files in other folders)
